syntax = "proto3";

package book;

service BookService {
  rpc FindOne (BookById) returns (Book);
  rpc FindMany (stream BookById) returns (stream Book);
}

message BookById {
  int32 id = 1;
}

message Book {
  int32 id = 1;
  string title = 2;
  int32 authorId = 3;
}
